Avoid text jumps when buttons change scale

--- a/styles.css
+++ b/styles.css
@@ -112,21 +112,22 @@ h1 {
   border-radius: 12px;
   background-color: hsl(212, 33%, 31%);
   color: hsl(210, 11%, 91%);
-  transition: all 0.3s ease;
   font-weight: 600;
   display: flex;
   justify-content: center;
   align-items: center;
+  will-change: transform;
+  transition: all 0.3s ease;
 }
 
 .game-grid div:not(.winner-div, .draw):hover {
   cursor: pointer;
-  scale: 1.08;
+  transform: scale(1.08) ;
   background-color: hsl(212, 33%, 35%);
 }
 
 .game-grid div:not(.winner-div):active {
-  scale: 0.85;
+  transform: scale(0.85);
 }
 
 .game-grid .winner-div {
@@ -166,6 +167,8 @@ button {
   border-radius: 4px;
   color: white;
   font-weight: 800;
+  will-change: transform;
+  transform-origin: center center;
   transition: all 0.2s ease;
 }
 
@@ -187,7 +190,7 @@ button:hover {
 }
 
 .ai-btn:active {
-  scale: 0.93;
+  transform: scale(0.93);
   background-color: hsl(342, 97%, 74%);
 }
 
@@ -208,7 +211,7 @@ button:hover {
 }
 
 .player-btn:active {
-  scale: 0.93;
+  transform: scale(0.93);
   background-color: hsl(212, 33%, 43%);
 }
 
